tests/suite/snapshots/suite__check__tests__check__bad_arg_shadowing.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_arg_shadowing.xi:2:5]
   │
 2 │ bar(foo: int) {}
   ·     ────┬───  
   ·         ╰───── Name already bound in environment
───╯

