tests/suite/snapshots/suite__check__tests__check__bad_array_size_2.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_array_size_2.xi:4:10]
   │
 4 │   d: int[i[5 + foo() + c[foo()]]]
   ·          ───────────┬───────────  
   ·                     ╰───────────── Expected int but found bool
───╯

