tests/suite/snapshots/suite__check__tests__check__bad_assign_1.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_assign_1.xi:2:9]
   │
 2 │     x = false
   ·         ──┬──  
   ·           ╰──── Expected int but found bool
───╯

